--- a/src/main/java/com/mycompany/u2a1_xuricky/U2A1_Xu_Ricky.form
+++ b/src/main/java/com/mycompany/u2a1_xuricky/U2A1_Xu_Ricky.form
@@ -144,6 +144,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Submit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="submitRequirementsActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
