--- a/src/main/java/com/mycompany/u2a1_xuricky/U2A1_Xu_Ricky.form
+++ b/src/main/java/com/mycompany/u2a1_xuricky/U2A1_Xu_Ricky.form
@@ -394,6 +394,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Submit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="submitViewVehicleActionPerformed"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane3">
               <AuxValues>
